--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "11.1.2",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
