--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.21.0",
     "@sanity/image-url": "^1.0.1",
-    "next": "11.1.2",
+    "next": "^11.1.2",
+    "next-i18next": "^8.9.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
