--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@sanity/image-url": "^1.0.1",
     "next": "^11.1.2",
     "next-i18next": "^8.9.0",
+    "nodemailer": "^6.7.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.4",
+    "react-i18next": "^11.12.0",
     "react-player": "^2.9.0"
   },
   "devDependencies": {
