--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/image-url": "^1.0.1",
     "next": "^11.1.2",
     "next-i18next": "^8.9.0",
+    "next-sanity-image": "^3.1.7",
     "nodemailer": "^6.7.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
