--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.4",
     "react-i18next": "^11.12.0",
-    "react-player": "^2.9.0"
+    "react-player": "^2.9.0",
+    "react-zoom-pan-pinch": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
