--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.7.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
+    "react-cool-inview": "^2.0.8",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.4",
     "react-i18next": "^11.12.0",
