--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.4",
     "react-i18next": "^11.12.0",
+    "react-image-magnifiers": "^1.4.0",
+    "react-intersection-observer": "^8.32.2",
     "react-player": "^2.9.0",
+    "react-router-dom": "^6.0.2",
     "react-zoom-pan-pinch": "^2.1.3"
   },
   "devDependencies": {
