--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.4",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.21.0",
     "@sanity/image-url": "^1.0.1",
+    "lightgallery": "^2.3.0",
     "next": "^11.1.2",
     "next-i18next": "^8.9.0",
     "next-sanity-image": "^3.1.7",
     "nodemailer": "^6.7.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
+    "react-collapsible": "^2.8.4",
     "react-cool-inview": "^2.0.8",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.4",
