--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-hook-form": "^7.17.4",
     "react-i18next": "^11.12.0",
     "react-player": "^2.9.0",
-    "react-zoom-pan-pinch": "^2.1.3"
+    "react-svg-pan-zoom": "^3.10.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
