--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.4",
     "react-i18next": "^11.12.0",
+    "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "react-svg-pan-zoom": "^3.10.0"
   },
