--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_URL=https://art-gallery-hk.vercel.app
-user=leslied41@gmail.com
-pass=Leslie880825
+user=artgallery.phdgroup.hk@gmail.com
+pass= Hkartgallery1997.
