--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-i18next": "^11.12.0",
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
-    "react-svg-pan-zoom": "^3.10.0"
+    "react-svg-pan-zoom": "^3.10.0",
+    "react-zoom-pan-pinch": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
