--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-hook-form": "^7.17.4",
     "react-i18next": "^11.12.0",
     "react-icons": "^4.3.1",
-    "react-player": "^2.9.0",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
