--- a/artgallerysanity/package.json
+++ b/artgallerysanity/package.json
@@ -14,6 +14,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@portabletext/react": "^1.0.3",
     "@sanity/base": "^2.20.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/core": "^2.20.0",
@@ -28,6 +29,5 @@
     "sanity-plugin-autocomplete-tags": "^1.0.1",
     "sanity-plugin-media": "^1.4.3",
     "styled-components": "^5.2.0"
-  },
-  "devDependencies": {}
+  }
 }
