--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.4",
+    "@portabletext/react": "^1.0.3",
+    "@sanity/asset-utils": "^1.2.3",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.21.0",
     "@sanity/image-url": "^1.0.1",
