implement oAuth2 regarding email sending

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,7 @@
 NEXT_PUBLIC_API_URL=https://www.phdgroup.art/
 user=artgallery.phdgroup.hk@gmail.com
 pass= Hkartgallery1997.
+CLIENT_ID=338953891888-n6clirtqjmophs2krlnoeg551adomevc.apps.googleusercontent.com
+CLIENT_SECRET =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
+REDIRET_URI =https://developers.google.com/oauthplayground
+REFRESH_TOKEN =1//04HVuzXPVuUtXCgYIARAAGAQSNwF-L9IrBUqAp9l4wxyxFVOytKlsVExupKSrPQ_QM4yvyQVEQ8hn_WILWHrkn6KoLruJnQoCup0
