--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.21.0",
     "@sanity/image-url": "^1.0.1",
+    "googleapis": "^100.0.0",
     "next": "^11.1.2",
     "next-i18next": "^8.9.0",
     "next-sanity-image": "^3.1.7",
@@ -30,7 +31,8 @@
     "react-hook-form": "^7.17.4",
     "react-i18next": "^11.12.0",
     "react-icons": "^4.3.1",
-    "react-player": "^2.9.0"
+    "react-player": "^2.9.0",
+    "twilio": "^3.77.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
