fix gmail oauth2 nodemailer

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=https://www.phdgroup.art/
+NEXT_PUBLIC_API_URL=https://www.phdgroup.art
 user=artgallery.phdgroup.hk@gmail.com
 pass= Hkartgallery1997.
 CLIENT_ID=338953891888-n6clirtqjmophs2krlnoeg551adomevc.apps.googleusercontent.com
