--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/client": "^2.21.0",
     "@sanity/image-url": "^1.0.1",
     "googleapis": "^100.0.0",
+    "groq": "^2.29.3",
     "next": "^11.1.2",
     "next-i18next": "^8.9.0",
     "next-sanity-image": "^3.1.7",
@@ -32,6 +33,7 @@
     "react-i18next": "^11.12.0",
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
+    "swr": "^1.3.0",
     "twilio": "^3.77.0"
   },
   "devDependencies": {
