--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-sanity-image": "^3.1.7",
     "nodemailer": "^6.7.0",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-cool-inview": "^2.0.8",
     "react-datepicker": "^4.7.0",
