--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.21.0",
     "@sanity/image-url": "^1.0.1",
+    "cross-env": "^7.0.3",
     "googleapis": "^100.0.0",
     "groq": "^2.29.3",
     "next": "^11.1.2",
@@ -35,7 +36,7 @@
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "swr": "^1.3.0",
-    "twilio": "^3.77.0"
+    "twilio": "^4.20.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
