--- a/artgallerysanity/package.json
+++ b/artgallerysanity/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0",
     "sanity-plugin-autocomplete-tags": "^1.0.1",
     "sanity-plugin-media": "^1.4.3",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "styled-components": "^5.2.0"
   }
 }
